fixed word-break on my-game-guides

--- a/public/stylesheets/my-game-guides.css
+++ b/public/stylesheets/my-game-guides.css
@@ -6,7 +6,7 @@ body {
     /* overflow: scroll; */
     display: inline-block;
    overflow-wrap: break-word;
-   word-break: break-all;
+   /* word-break: break-all; */
    width: 100%;
    height: 100%;
 }
